tests/simple/syntax-error/1.php
<?php

class Test
{
  public function a()
  {
    return $this->b(); 123123
  }
}
